[package]
name = "orbcafebot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
features = [
  "builder",
  "cache",
  "framework",
  "model",
  "standard_framework", 
  "rustls_backend",
  "utils",
]
ron = "0.5.1"